fixed the issue where firmware version was not working

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,20 @@
 /packages
 /PrinterCommandExecute/bin
 .vs/InkCostCalculator/FileContentIndex/87d1e14d-473d-4263-b8e4-894b072b3c8a.vsidx
+/InkCostCalculatorL301/bin
+/InkCostCalculatorL301/obj/Debug
+/InkCostCalculatorL501/bin
+/InkCostCalculatorL501/obj/Debug
+/InkCostCalculatorL501EnhancedWPF/bin
+/InkCostCalculatorL501EnhancedWPF/obj
+/InkCostModel/bin
+/InkCostCalculatorL301/obj
+/InkCostCalculatorL501/obj
+/InkCostModel/obj
+/PrinterCommandExecute/obj
+/PrintMonitor/bin
+/PrintMonitor/obj
+/PrintQueueMonitor/bin
+/PrintQueueMonitor/obj
+/UnitTests/bin
+/UnitTests/obj
